# overwatch-tournaments

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  REALTIME_ROADMAP.md  docker-compose.gpu.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  implementation_plan.md  overwatch-tournaments.code-workspace
backend/analytics-service/: README.md  main.py  pyproject.toml  serve.py  serve_rpc.py
backend/analytics-service/docs/: runbook-merit-recompute.md  runbook-shift-recompute.md
backend/analytics-service/scripts/: diagnose_performance_coverage.py  diagnose_shift_v2.py
backend/analytics-service/src/: openapi_docs.py  openapi_schemas.py  scheduler.py
backend/analytics-service/tests/: test_analytics_algorithms_has_data.py  test_analytics_flows.py  test_analytics_grid_normalization.py  test_analytics_job_runner.py  test_analytics_route_permissions.py  test_analytics_route_permissions_app.py  test_analytics_workspace_member_readers.py  test_analytics_workspace_scope.py  test_balance_snapshot_consumer.py  test_canonical_division.py  test_feature_cache.py  test_inference_workspace_resolution.py  test_linear_analytics.py  test_ml_anomaly_tuning.py  test_ml_backtest_scoring.py  test_ml_calibration.py  test_ml_match_quality.py  test_ml_mvp_dominance.py  test_ml_player_signals.py  test_ml_shift_training.py  test_ml_standings.py  test_ml_training_device.py  test_opponent_strength.py
backend/app-service/: .importlinter  README.md  main.py  pyproject.toml  serve.py
backend/app-service/src/: openapi_docs.py  openapi_schemas.py
backend/app-service/tests/: conftest.py  test_achievement_service_v2_refactor.py  test_division_grid_marketplace.py  test_division_grid_resolution.py  test_division_rank_domain.py  test_encounter_service_unique.py  test_hostnames.py  test_joinedload_unique_reads.py  test_me_social_no_player.py  test_player_sub_roles.py  test_tournament_recalculation_events.py  test_tournament_visibility_reads.py  test_user_compare_cache.py  test_user_compare_performance_contract.py  test_user_merge_workspace_member.py  test_user_profile_flows.py  test_user_read_caches.py  test_user_social_integration.py  test_user_to_pydantic.py  test_users_admin_avatar_propagation.py  test_users_overview_workspace_scope.py  test_workspace_branding_schema.py  test_workspace_custom_domain.py  test_workspace_member_helpers.py  test_workspace_service.py  test_workspace_timezone_schema.py
backend/balancer-service/: README.md  main.py  pyproject.toml  serve.py
backend/balancer-service/scripts/: benchmark_balancer_runtime.py
backend/balancer-service/src/: composition.py  openapi_docs.py  openapi_schemas.py
backend/balancer-service/tests/: test_admin_use_case_architecture.py  test_api_key_limits_and_policy.py  test_balance_exported_event.py  test_balancer_config.py  test_balancer_jobs.py  test_balancer_registration_roles.py  test_balancer_status_checkin.py  test_balancer_utils.py  test_config_consistency.py  test_draft_clock.py  test_draft_contracts.py  test_draft_custom_rules.py  test_draft_export.py  test_draft_feasibility.py  test_draft_integration.py  test_draft_models.py  test_draft_ranks.py  test_draft_role_edit.py  test_draft_schemas.py  test_draft_snake_order.py  test_draft_state.py  test_draft_suggestions.py  test_feasibility_analyzer.py  test_moo_native_gil.py  test_ow_rank_normalization.py  test_public_balancer_architecture.py  test_rating_normalizer.py  test_result_serializer.py  test_route_prefixes.py  test_team_workspace_member.py  test_workspace_auth_dependencies.py
backend/shared/: README.md  balancer_registration_statuses.py  balancer_subrole_catalog.py  division_grid.py  hero_catalog.py  pyproject.toml
backend/shared/balancer/: __init__.py  protocol.py  types.py
backend/shared/clients/: __init__.py  auth_client.py  circuit_breaker.py  http_client.py
backend/shared/core/: auth.py  config.py  db.py  draft_state.py  enums.py  errors.py  http_status.py  impact.py  middleware.py  pagination.py  proxy.py  scalar.py  social.py  tournament_state.py  utils.py
backend/shared/domain/: __init__.py  division_rank.py  player_sub_roles.py
backend/shared/messaging/: __init__.py  config.py  outbox.py  topology.py
backend/shared/models/: __init__.py  achievement.py  analytics.py  api_key.py  auth_user.py  balancer.py  challonge_sync.py  discord_channel.py  division_grid.py  draft.py  encounter.py  encounter_link.py  encounter_map.py  encounter_saved_view.py  gamemode.py  log_processing.py  map.py  match.py  oauth.py  outbox.py  overwatch_rank.py  rbac.py  realtime.py  settings.py  social.py  stage.py  standings.py  team.py  tournament.py  user.py  user_merge_audit.py  workspace.py
backend/shared/observability/: __init__.py  broker.py  correlation.py  health.py  logging.py  metrics.py  sentry.py  time_middleware.py  tracing.py  worker.py
backend/shared/rbac/: __init__.py  bootstrap.py  catalog.py
backend/shared/repository/: __init__.py  base.py  catalog.py  identity.py  registration.py  settings.py  support.py  tournament.py  workspace.py
backend/shared/rpc/: __init__.py  crud.py  deadline.py  identity.py  openapi.py  query.py
backend/shared/schemas/: __init__.py  events.py  healthcheck.py  realtime.py  rpc.py  settings.py
backend/shared/services/: achievement_effective.py  balancer_realtime.py  challonge_refs.py  distributed_lock.py  division_grid_access.py  division_grid_cache.py  division_grid_normalization.py  division_grid_resolution.py  encounter_naming.py  profile_visibility.py  rank_snapshots.py  realtime_publisher.py  realtime_topics.py  settings_provider.py  social_identity.py  stage_refs.py  tournament_computation.py  tournament_utils.py  tournament_visibility.py
backend/shared/tenancy/: hostnames.py
backend/shared/tests/: test_achievement_effective_workspace_member.py  (+16 more)
backend/tournament-service/: README.md  main.py  pyproject.toml  serve.py  serve_bracket.py  serve_standings.py  test_closeness.py  test_db_query.py
loadtests/: .gitignore  README.md  config.py  locust.conf  locustfile.py  pyproject.toml  seed.py
(+2039 files in other folders)
