[project]
name = "analytics-service"
version = "0.1.0"
description = "Analytics service: v1 OpenSkill/linear shifts and predictions, v2 ML pipeline (planned)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.17.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "cashews>=7.4.0",
    "fastapi[standard]>=0.127.0",
    "faststream[rabbit]>=0.6.7",
    "httpx>=0.28.1",
    "socksio>=1.0.0",
    "loguru>=0.7.3",
    "numpy>=1.26.0",
    "openskill>=6.1.3",
    "orjson>=3.10.14",
    "pandas>=2.3.3",
    # ML stack (Phase 1+) — kept here so Docker builds for analytics-service
    # install them; not consumed by parser-service.
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.1",
    "scipy>=1.13",
    "shap>=0.46",
    "ruptures>=1.1",
    "statsmodels>=0.14",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "redis>=5.2.1",
    "sentry-sdk>=2.20.0",
    "setuptools>=75.8.0",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-utils>=0.41.2",
    "tenacity>=9.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "uvicorn>=0.34.0",
    "uvloop; platform_system == 'Linux'",
    "shared",
]


[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "F403",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
