[project]
name = "balancer-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
     "apscheduler>=3.10.4",
     "aiobotocore>=2.17.0",
     "alembic>=1.14.0",
     "asyncpg>=0.30.0",
     "bcrypt>=4.2.1",
     "cachetools>=6.2.3",
     "cashews>=7.4.0",
     "discord-py>=2.6.4",
     "fastapi[standard]>=0.124.4",
     "faststream[rabbit]>=0.6.7",
     "httpx>=0.28.1",
     "loguru>=0.7.3",
     "maturin>=1.8.2; platform_system == 'Linux'",
     "openpyxl>=3.1.5",
     "openskill>=6.1.3",
     "orjson>=3.10.14",
     "pandas>=2.3.3",
     "passlib>=1.7.4",
     "psycopg[binary]>=3.2.3",
     "pydantic-settings>=2.7.1",
     "pydantic[email]>=2.10.5",
     "python-jose>=3.5.0",
     "redis>=5.2.1",
     "regex>=2024.11.6",
     "sentry-sdk>=2.20.0",
     "setuptools>=75.8.0",
     "sqlalchemy>=2.0.37",
     "sqlalchemy-utils>=0.41.2",
     "tenacity>=9.0.0",
     "opentelemetry-api>=1.27.0",
     "opentelemetry-sdk>=1.27.0",
     "opentelemetry-instrumentation-fastapi>=0.48b0",
     "opentelemetry-instrumentation-httpx>=0.48b0",
     "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
     "opentelemetry-exporter-otlp>=1.27.0",
     "prometheus-fastapi-instrumentator>=7.0",
     "uvicorn>=0.34.0",
     "uvloop; platform_system == 'Linux'",
     "shared",
]
