[package]
name = "moo_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "moo_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Включается только при сборке Python-расширения (maturin --features extension-module).
# При обычной сборке/тестах (cargo test/bench) крейт линкуется с libpython напрямую.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.25" }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "moo_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
